ajouter label au BD

--- a/scolarite/templates/registration/login.html
+++ b/scolarite/templates/registration/login.html
@@ -5,19 +5,58 @@
     <title>login</title>
 </head>
 <body>
-         {% if form.errors %}
-             <p>There is something wrong </p>
-         {% endif %}
+{% block content %}
+{% if form.errors %}
+    <p>Your email and password didn't match. Please try again.</p>
+{% endif %}
 
-         {% if next %}
-           <p> Hey , you can not access that page </p>
-         {% endif %}
-          <form method="post" action="{% url 'login' %}">
-              {% csrf_token %}
-              <p>Nom d'utilisateur:{{ form.username }}</p>
-              <p>Mot de passe     :{{ form.password }}</p>
-              <input type="submit" value ="login">
-              <input type="hidden" name="next" value="{{ next }}">
-          </form>
+<form class="form-horizontal" method="post" action = "." >{%csrf_token%}
+<div class="panel panel-default login">
+            <div class="panel-heading">
+                <span class="glyphicon glyphicon-lock"></span> Login</div>
+            <div class="panel-body">
+                <form class="form-horizontal" role="form">
+                <div class="form-group">
+                    <div class='col-sm-6 col-sm-offset-4'>
+                    <table border="0">
+                    <div class="col-sm-4">
+
+        <tr><th><label for="id_user" class="col-sm-4 control-label">Email:</label></th><td>{{ form.email }}</td></tr> </div>
+        <div class="col-sm-4">
+
+
+        <tr><th><label for="id_password" class="col-sm-4 control-label">Mot de passe :</label></th><td>{{ form.password }}</td></tr> </div>
+
+    </table> </div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-sm-offset-4 col-sm-8">
+                        <div class="checkbox">
+                            <label>
+                                <input type="checkbox"/>
+                                Remember me
+                            </label>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group last">
+                    <div class="col-sm-offset-4 col-sm-8">
+                        <button type="submit" class="btn btn-success btn-sm">
+                            Sign in</button>
+                        <input type="hidden" name="next" value="/" />
+                            <label class="col-sm-offset-3">
+                     <a href="#">Oublier le mot de passe ? </a>
+                </label>
+                    </div>
+                </div>
+                </form>
+            </div>
+            <div class="panel-footer">
+                N'est pas inscrit ? <a href="/register/">inscrire</a></div>
+
+</div>
+</form>
+{% endblock %}
 </body>
 </html>
